Updated poms to point to the new location of test suite classes.

--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -71,7 +71,7 @@
             <configuration>
               <redirectTestOutputToFile>true</redirectTestOutputToFile>
               <testSuite>${project.artifactId}</testSuite>
-              <testClass>scala.tools.eclipse.leaks.MemoryLeaksTest</testClass>
+              <testClass>org.scalaide.core.leaks.MemoryLeaksTest</testClass>
             </configuration>
           </plugin>
         </plugins>
@@ -117,7 +117,7 @@
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <testSuite>${project.artifactId}</testSuite>
-          <testClass>scala.tools.eclipse.TestsSuite</testClass>
+          <testClass>org.scalaide.core.TestsSuite</testClass>
         </configuration>
       </plugin>
       <plugin>
