--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -125,7 +125,7 @@
             default="true"
             icon="icons/full/obj16/scu_obj.gif"
             extensions="scala"
-            contributorClass="org.scalaide.ui.internal.editor.ScalaCompilationUnitEditorActionContributor"
+            contributorClass="org.eclipse.jdt.internal.ui.javaeditor.CompilationUnitEditorActionContributor"
             class="org.scalaide.ui.internal.editor.ScalaSourceFileEditor"
             symbolicFontName="org.eclipse.jdt.ui.editors.textfont"
             id="scala.tools.eclipse.ScalaSourceFileEditor">
@@ -250,26 +250,6 @@
      </actionSet>
    </extension>
 
-  <extension
-         point="org.eclipse.ui.actionSets">
-      <actionSet
-            label="Scala text editor"
-            visible="true"
-            id="scala.texteditor.actionset">
-         <action
-               allowLabelUpdate="true"
-               definitionId="showInferredSemicolonsAction"
-               icon="icons/show_inferred_semicolons.png"
-               id="showInferredSemicolonsAction"
-               label="Show inferred semicolons"
-               retarget="true"
-               style="toggle"
-               toolbarPath="Normal/Presentation"
-               tooltip="Show inferred semicolons">
-        </action>
-
-      </actionSet>
-   </extension>
 
    <extension
       id="ScalaDocumentSetupParticipant"
@@ -856,11 +836,6 @@
       id="org.eclipse.shortcut.scala.debug"
       name="Debug Scala Application" />
     <command
-      name="Show inferred semicolons"
-      description="Shows inferred semicolons in the current editor"
-      categoryId="org.eclipse.ui.category.textEditor"
-      id="scala.tools.eclipse.toggleShowInferredSemicolonsAction"/>
-    <command
       categoryId="scala.tools.eclipse.category"
       description="Run Scala JUnit Test"
       id="org.eclipse.shortcut.scala.junit.run"
@@ -870,12 +845,6 @@
       description="Debug Scala JUnit Test"
       id="org.eclipse.shortcut.scala.junit.debug"
       name="Debug Scala JUnit Test" />
-    <command
-      categoryId="scala.tools.eclipse.category"
-      description="Toggle Mark Occurences"
-      id="org.scala-ide.sdt.core.toggleMarkOccurences"
-      name="Toggle Mark Occurrences">
-    </command>
   </extension>
 
   <extension point="org.eclipse.ui.bindings">
@@ -1214,6 +1183,18 @@
          id="scala.tools.eclipse.editor.OpenImplicit"
          name="Open Implicit">
       </command>
+      <command
+            categoryId="scala.tools.eclipse.category"
+            description="Toggle Mark Occurences"
+            id="org.scala-ide.sdt.core.toggleMarkOccurences"
+            name="Toggle Mark Occurrences">
+      </command>
+      <command
+            categoryId="scala.tools.eclipse.category"
+            description="Show inferred semicolons in all text editors"
+            id="org.scalaide.core.handler.showInferredSemicolons"
+            name="Show inferred semicolons">
+      </command>
 </extension>
 
    <extension point="org.eclipse.ui.contexts">
@@ -1321,23 +1302,36 @@
           class="org.scalaide.ui.internal.editor.decorators.markoccurrences.ToggleMarkOccurrencesHandler"
           commandId="org.scala-ide.sdt.core.toggleMarkOccurences">
     </handler>
+    <handler
+          class="org.scalaide.ui.internal.editor.decorators.semicolon.ShowInferredSemicolonsHandler"
+          commandId="org.scalaide.core.handler.showInferredSemicolons">
+    </handler>
  </extension>
  <extension
        point="org.eclipse.ui.menus">
     <menuContribution
           locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
        <toolbar
-             id="org.scala-ide.sdt.core.toolbar">
+             id="org.scala-ide.sdt.core.toolbar"
+             label="Scala Text Editor">
           <command
                 commandId="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
                 icon="icons/full/elcl16/implicit_co.gif"
                 id="org.scala-ide.sdt.core.toolbar.ToggleImplicitsDisplay"
+                label="Toggle Implicits Display"
                 style="toggle">
           </command>
           <command
                 commandId="org.scala-ide.sdt.core.toggleMarkOccurences"
                 icon="icons/full/etool16/mark_occurrences.png"
                 id="org.scala-ide.sdt.core.toolbar.ToggleMarkOccurences"
+                label="Toggle Mark Occurrences"
+                style="toggle">
+          </command>
+          <command
+                commandId="org.scalaide.core.handler.showInferredSemicolons"
+                icon="icons/show_inferred_semicolons.png"
+                label="Show inferred semicolons"
                 style="toggle">
           </command>
        </toolbar>
