Add missing groupIds in pom files
Missing groupId cause the tycho-set-version plugin to fail with an NPE,
see https://dev.eclipse.org/mhonarc/lists/tycho-user/msg04571.html

--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -83,6 +83,7 @@
     <plugins>
       <plugin>
         <!-- automatically clean up the sources which are unpacked for the memory test -->
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
           <filesets>
