--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,7 @@
               <configuration>
                 <dependencies>
                   <dependency>
+                    <groupId>org.eclipse.jdt</groupId>
                     <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
                     <type>eclipse-plugin</type>
                   </dependency>
@@ -270,6 +271,7 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
             <version>1.7</version>
             <executions>
@@ -469,6 +471,7 @@
           <version>${maven-source.plugin.version}</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${maven-clean.plugin.version}</version>
         </plugin>
