Introduce a migration manager for key preferences/bindings
Whenever the command ids of key bindings, that are defined by users,
are changed all the preferences are lost because the new commands do no
longer consider their values. To avoid this problem the class
`MigrationPreferenceInitializer` is introduced which can copy old
preference values that are defined by users and set them as default
values for the new preferences.

This class also undefines the old command id and therefore the old key
binding after the migration is done.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -772,6 +772,9 @@
      <initializer
            class="org.scalaide.ui.internal.preferences.EditorPreferenceInitializer">
      </initializer>
+     <initializer
+           class="org.scalaide.ui.internal.migration.MigrationPreferenceInitializer">
+     </initializer>
   </extension>
 
   <extension point="org.eclipse.core.expressions.propertyTesters">
