Add property tester for text selections
The `nonEmpty` test on a text selection checks whether something is
selected in an editor. This is used in refactoring handlers in order
to disable them when they can't be applied.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -783,7 +783,14 @@
            id="scala.tools.eclipse.launching.ScalaLaunchableTester"
            namespace="scala.tools.eclipse.launching"
            properties="hasMain,canLaunchAsJUnit"
-           type="org.eclipse.core.runtime.IAdaptable"/>            
+           type="org.eclipse.core.runtime.IAdaptable"/>
+     <propertyTester
+           class="org.scalaide.ui.internal.editor.TextSelectionTester"
+           id="org.scalaide.ui.internal.editor.TextSelectionTester"
+           namespace="org.scalaide.ui.internal.editor"
+           properties="nonEmpty"
+           type="org.eclipse.jface.text.ITextSelection">
+     </propertyTester>
   </extension>
 
   <extension point="org.eclipse.debug.ui.launchShortcuts">
@@ -1177,6 +1184,15 @@
     <handler
           class="org.scalaide.refactoring.internal.ExpandCaseClassBinding"
           commandId="org.scalaide.refactoring.ExpandCaseClassBinding">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.method.ChangeParameterOrder"
@@ -1193,6 +1209,15 @@
     <handler
           class="org.scalaide.refactoring.internal.rename.Rename"
           commandId="org.scalaide.refactoring.Rename">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.OrganizeImports"
@@ -1201,18 +1226,54 @@
     <handler
           class="org.scalaide.refactoring.internal.InlineLocal"
           commandId="org.scalaide.refactoring.InlineLocal">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.ExtractLocal"
           commandId="org.scalaide.refactoring.ExtractLocal">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.ExtractMethod"
           commandId="org.scalaide.refactoring.ExtractMethod">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.move.MoveClass"
           commandId="org.scalaide.refactoring.MoveClass">
+       <enabledWhen>
+          <with
+                variable="selection">
+             <test
+                   property="org.scalaide.ui.internal.editor.nonEmpty"
+                   value="true">
+             </test>
+          </with>
+       </enabledWhen>
     </handler>
     <handler
           class="org.scalaide.refactoring.internal.ExtractTrait"
