--- a/pom.xml
+++ b/pom.xml
@@ -115,10 +115,10 @@
       <id>scala-2.11.x</id>
       <properties>
         <scala.version>2.11.0-SNAPSHOT</scala.version>
-        <scala.binary.version>2.11.0-M7</scala.binary.version>
-        <scala-xml.version>1.0.0-RC7</scala-xml.version>
-        <scala-parser-combinators.version>1.0.0-RC5</scala-parser-combinators.version>
-        <scala-swing.version>1.0.0-RC2</scala-swing.version>
+        <scala.binary.version>2.11.0-RC1</scala.binary.version>
+        <scala-xml.version>1.0.0</scala-xml.version>
+        <scala-parser-combinators.version>1.0.0</scala-parser-combinators.version>
+        <scala-swing.version>1.0.0</scala-swing.version>
 
         <version.suffix>2_11</version.suffix>
 
