Add handler+icon for indent guide feature

--- a/org.scala-ide.sdt.core/about.ini
+++ b/org.scala-ide.sdt.core/about.ini
@@ -7,3 +7,4 @@ The Scala IDE for Eclipse provides an integrated environment for creating Scala 
 Visit http://scala-ide.org/\n\n\
 Typesafe Team: Luc Bourlier, Mirco Dotta, Iulian Dragos, Martin Odersky, and Hubert Plocinicak.\n\
 Many thanks to David Bernard, Donna Malayeri, Eric Molitor, Matt Russell, Miles Sabin, Simon Schäfer, Mirko Stocker, Joshua Suereth, Eugene Vigdorchik, and all other contributors.\n\
+Further thanks to FatCow Web Hosting - http://www.fatcow.com/ - for their icon set Farm-fresh.\n\
