Re-implements SbtBuild using RxScla and wrappers

--- a/org.scala-ide.sbt.core/.classpath
+++ b/org.scala-ide.sbt.core/.classpath
@@ -7,6 +7,8 @@
 	<classpathentry exported="true" kind="lib" path="target/lib/interface.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/lib/launcher-interface.jar"/>
 	<classpathentry kind="lib" path="target/lib/io.jar"/>
+	<classpathentry kind="lib" path="target/lib/rxjava-core.jar"/>
+	<classpathentry kind="lib" path="target/lib/rxjava-scala.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="target/lib/akka-actor_2.10.jar"/>
