--- a/org.scala-ide.sbt.core/build.properties
+++ b/org.scala-ide.sbt.core/build.properties
@@ -20,5 +20,7 @@ bin.includes = META-INF/,\
                target/lib/play-iteratees_2.10.jar,\
                target/lib/play-json_2.10.jar,\
                target/lib/scala-stm_2.10.jar,\
-               target/lib/control.jar
+               target/lib/control.jar,\
+               target/lib/rxjava-core.jar,\
+               target/lib/rxjava-scala.jar
 
