Updated aspectj dependency to latest stable (1.7.4).

--- a/org.scala-ide.sdt.aspects/pom.xml
+++ b/org.scala-ide.sdt.aspects/pom.xml
@@ -43,6 +43,7 @@
             <configuration>
               <source>1.5</source>
               <target>1.5</target>
+              <complianceLevel>1.5</complianceLevel>
               <aspectDirectory>src</aspectDirectory>
               <Xlint>ignore</Xlint>
               <deprecation>true</deprecation>
