--- a/org.scala-ide.sdt.core.tests/test-workspace/classpath/lib/2.9.x/binary-scala-library/library.properties
+++ b/org.scala-ide.sdt.core.tests/test-workspace/classpath/lib/2.9.x/binary-scala-library/library.properties
@@ -1,4 +1,4 @@
 # To test library with a 2.9.x version number
 
-version.number=2.9.x
+version.number=2.9.0
 copyright.string=Copyright 2002-2011, LAMP/EPFL
