integrate new extract value refactoring
A more powerful version of the existing Extract Value refactoring.

Extract Value creates a new val definition that includes the extracted
code and replaces the original expressions by a reference to the new
value.

This implementation of Extract Value offers the following features:
- Extraction of values into arbitrary target scopes in the same CU
- Inline renaming of the extracted value
- Supports the extraction of multiple value definitions
- Extraction of anonymous functions

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1127,6 +1127,19 @@
             </enablement>
          </action>
          <action
+               class="org.scalaide.refactoring.internal.extract.ExtractValueAction"
+               definitionId="org.scalaide.refactoring.command.ExtractValue"
+               id="org.scalaide.refactoring.extractValueAction"
+               label="Extract Value"
+               menubarPath="scala.tools.eclipse.refactoring.refactoringMenu/scala.tools.eclipse.refactoring.codeExtractionGroup"
+               tooltip="Extract Value">
+            <enablement>
+               <objectClass
+                     name="org.eclipse.jface.text.TextSelection">
+               </objectClass>
+            </enablement>
+         </action>
+         <action
                class="org.scalaide.ui.internal.actions.RunSelectionAction"
                definitionId="scala.tools.eclipse.interpreter.RunSelection"
                disabledIcon="icons/full/dtool16/run_interpreter.gif"
@@ -1203,6 +1216,10 @@
          categoryId="scala.tools.eclipse.refactoring.commands.refactoring"
          id="scala.tools.eclipse.refactoring.command.ExpandCaseClassBinding"
          name="Expand Case Class Binding"/>
+      <command
+         categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
+         id="org.scalaide.refactoring.command.ExtractValue"
+         name="Extract Value"/>
       <command
          categoryId="scala.tools.eclipse.category"
          id="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
