integrate new extract method refactoring
A more powerful version of the existing Extract Method refactoring.

Extract Method creates a new method definition based on the selected
code and replaces it by the according method invocation.

This implementation of Extract Method offers the following features:
- Extraction of methods into arbitrary target scopes in the same CU
- Inline renaming of the extracted method and its parameters

Known limitations:
- Extraction of modifications to mutable variables are not yet supported
  def f = {
    var i = 0
    i += 1 // extraction of this line into scopes where i is not
reachable is not allowed
    println(i)
  }

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1140,6 +1140,19 @@
             </enablement>
          </action>
          <action
+               class="org.scalaide.refactoring.internal.extract.ExtractMethodAction"
+               definitionId="org.scalaide.refactoring.command.ExtractMethod"
+               id="org.scalaide.refactoring.extractMethodAction"
+               label="Extract Method"
+               menubarPath="scala.tools.eclipse.refactoring.refactoringMenu/scala.tools.eclipse.refactoring.codeExtractionGroup"
+               tooltip="Extract Method">
+            <enablement>
+               <objectClass
+                     name="org.eclipse.jface.text.TextSelection">
+               </objectClass>
+            </enablement>
+         </action>
+         <action
                class="org.scalaide.ui.internal.actions.RunSelectionAction"
                definitionId="scala.tools.eclipse.interpreter.RunSelection"
                disabledIcon="icons/full/dtool16/run_interpreter.gif"
@@ -1220,6 +1233,10 @@
          categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
          id="org.scalaide.refactoring.command.ExtractValue"
          name="Extract Value"/>
+      <command
+         categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
+         id="org.scalaide.refactoring.command.ExtractMethod"
+         name="Extract Method"/>
       <command
          categoryId="scala.tools.eclipse.category"
          id="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
