integrate extract parameter refactoring
Extract Parameter adds a new parameter to a method based on an
arbitrary expression that evaluates to a value. The original expression
becomes the default value of the new parameter. Hence, the according
method calls are not modified by this refactoring.

- Allows to choose the method to add the parameter when invoked in
nested methods.
- Inline renaming of the extracted parameter

Knowns limitations:
- Does currently not support parameter extraction in methods with no
parameter list. Adding parameter lists would break compatibility with
the existing method signature and require to update all existing method
calls.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1153,6 +1153,19 @@
             </enablement>
          </action>
          <action
+               class="org.scalaide.refactoring.internal.extract.ExtractParameterAction"
+               definitionId="org.scalaide.refactoring.command.ExtractParameter"
+               id="org.scalaide.refactoring.extractParameterAction"
+               label="Extract Parameter"
+               menubarPath="scala.tools.eclipse.refactoring.refactoringMenu/scala.tools.eclipse.refactoring.codeExtractionGroup"
+               tooltip="Extract Parameter">
+            <enablement>
+               <objectClass
+                     name="org.eclipse.jface.text.TextSelection">
+               </objectClass>
+            </enablement>
+         </action>
+         <action
                class="org.scalaide.ui.internal.actions.RunSelectionAction"
                definitionId="scala.tools.eclipse.interpreter.RunSelection"
                disabledIcon="icons/full/dtool16/run_interpreter.gif"
@@ -1237,6 +1250,10 @@
          categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
          id="org.scalaide.refactoring.command.ExtractMethod"
          name="Extract Method"/>
+      <command
+         categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
+         id="org.scalaide.refactoring.command.ExtractParameter"
+         name="Extract Parameter"/>
       <command
          categoryId="scala.tools.eclipse.category"
          id="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
