integrate extract extractor refactoring
Creates a new extractor object based on a selected pattern or a guarded
pattern.

- Extraction of extractors into arbitrary enclosing target scopes in
the same CU
- Inline renaming of the extracted extractor

Known limitations:
- Extraction of extractors into package scopes is not yet supported.
- Every binding in the pattern becomes a return value of unapply. Even
if it is not used on the patterns right hand side:
  Extraction of the following pattern (inclusive guard)
    case (x, y) if x == y => “pair with equal values”
  becomes
    case Extracted(x, y) => “pair with equal values”

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1166,6 +1166,19 @@
             </enablement>
          </action>
          <action
+               class="org.scalaide.refactoring.internal.extract.ExtractExtractorAction"
+               definitionId="org.scalaide.refactoring.command.ExtractExtractor"
+               id="org.scalaide.refactoring.extractExtractorAction"
+               label="Extract Extractor"
+               menubarPath="scala.tools.eclipse.refactoring.refactoringMenu/scala.tools.eclipse.refactoring.codeExtractionGroup"
+               tooltip="Extract Extractor">
+            <enablement>
+               <objectClass
+                     name="org.eclipse.jface.text.TextSelection">
+               </objectClass>
+            </enablement>
+         </action>
+         <action
                class="org.scalaide.ui.internal.actions.RunSelectionAction"
                definitionId="scala.tools.eclipse.interpreter.RunSelection"
                disabledIcon="icons/full/dtool16/run_interpreter.gif"
@@ -1254,6 +1267,10 @@
          categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
          id="org.scalaide.refactoring.command.ExtractParameter"
          name="Extract Parameter"/>
+      <command
+         categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
+         id="org.scalaide.refactoring.command.ExtractExtractor"
+         name="Extract Extractor"/>
       <command
          categoryId="scala.tools.eclipse.category"
          id="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
